[build-system]
requires = [
  "setuptools>=61.0",
  "pytest>=6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "phyling"
authors = [
  { name="Jason Stajich", email="jasonstajich.phd@gmail.com" },
  { name="Cheng-Hung Tsai", email="chenghung.tsai@email.ucr.edu" },
]
description = "A lightweight phylogenetic tree builder from annotated genomes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.scripts]
phyling = "phyling.phyling:main"

[project.urls]
"Homepage" = "https://github.com/stajichlab/PHYling_unified/tree/rewrite"
"Bug Tracker" = "https://github.com/stajichlab/PHYling_unified/issues"

[tool.setuptools.dynamic]
version = {attr = "phyling.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]