[build-system]
requires = [
  "setuptools>=61.0",
  "pytest>=6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "phyling"
version = "2.0.0-alpha"
authors = [
  { name="Jason Stajich", email="jasonstajich.phd@gmail.com" },
  { name="Cheng-Hung Tsai", email="chenghung.tsai@email.ucr.edu" },
]
license = {file = "LICENSE"}
description = "A lightweight phylogenetic tree builder from annotated genomes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.scripts]
phyling = "phyling.phyling:main"

[project.urls]
"Homepage" = "https://github.com/stajichlab/PHYling_unified"
"Bug Tracker" = "https://github.com/stajichlab/PHYling_unified/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]
