[build-system]
requires = ["setuptools>=61.0", "pytest>=6.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "phyling"
authors = [
  { name = "Jason Stajich", email = "jasonstajich.phd@gmail.com" },
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
maintainers = [
  { name = "Jason Stajich", email = "jasonstajich.phd@gmail.com" },
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
license = { file = "LICENSE" }
description = "A lightweight phylogenetic tree builder from annotated genomes."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.scripts]
phyling = "phyling.__main__:main"

[project.urls]
"Homepage" = "https://github.com/stajichlab/PHYling"
"Bug Tracker" = "https://github.com/stajichlab/PHYling/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest_env]
PHYLING_DB = { value = "{PWD}/tests/database", transform = true }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -vv --order-dependencies"
testpaths = ["tests"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E203", "E402", "E701"]
